[package]
name        = "yaml-patch"
version     = "0.1.0"
edition     = "2018"
description = "Merge YAML values together to enable hierarchical configurations"
authors     = ["J. Zrake"]
readme      = "README.md"
license     = "MIT"
repository  = "https://github.com/clemson-cal/yaml-patch"


[dependencies]
serde = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
